--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@date-io/moment": "^1.3.6",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "@material-ui/pickers": "^3.2.6",
     "acorn": "^6.1.1",
     "copy-to-clipboard": "^3.2.0",
     "deepmerge": "^3.2.0",
